ci.yml > cicd.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,21 @@ spring:
       hibernate:
         format_sql: true
     defer-datasource-initialization: true
-  datasource:
-    url: jdbc:h2:mem:testdb
-    username: sa
   h2:
     console:
       enabled: true
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: test_id
+            client-secret: test_secret
+            scope:
+              - email
+              - profile
+
+
+jwt:
+  issuer: ajufresh@gmail.com
+  secret_key: test_key
